fixed wide screen about bottom area, text overflowed from border

--- a/styles/containerStyles.css
+++ b/styles/containerStyles.css
@@ -128,4 +128,8 @@ padding-left: 5%;
   .language-change span {
     font-size: 4vw;
   }
+  
+  .border {    
+  padding-bottom: 3%;
+  }
 }
